feat: very nice help
and better testing